Fix image overflows in markdown pages

--- a/static/resources/css/base.css
+++ b/static/resources/css/base.css
@@ -152,6 +152,11 @@ a:visited:hover {
     color: rgb(113, 60, 221);
 }
 
+/* Image styling */
+.image-wrapper {
+    overflow-x: scroll;
+}
+
 /* CONTAINER STYLING */
 .grid-container {
     display: grid;
